# czgenepi

./: .gitignore  .hgtags  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  Buildfile  DEV_ENV.md  LICENSE  Makefile  Pipfile  Procfile  README.md  alembic.ini  docker-compose-emptydb.yml  docker-compose.yml  environment  main.tf  mpx_hgsid  package-lock.json  package.json  requirements.txt  terraform.mk  terraform.tfvars.json
src/backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.arm64  Dockerfile.covidhub_import  Dockerfile.gisaid  Dockerfile.gisaid2  Dockerfile.lineage_qc  Dockerfile.nextstrain  Dockerfile.oso-builder  Dockerfile.pangolin  Makefile  Pipfile  covidhub_import.sh  create_aligned_gisaid_dump.sh  environment.yaml  install_nextclade.sh  manual_queries.sql  pyproject.toml  pyproject.toml.fastapi  requirements.txt  setup.py  test.fa
src/backend/aspen/: conftest.py  main.py  setup.py  uvicorn_worker.py
src/backend/aspen/api/: auth.py  authn.py  authz.py  conftest.py  deps.py  gunicorn_conf.py  main.py  policy.polar  settings.py
src/backend/aspen/app/: app.py  aspen_app.py  gunicorn_conf.py  serializers.py
src/backend/aspen/auth/: auth0_management.py  auth0_mock.py  device_auth.py  role_manager.py
src/backend/aspen/aws/: __init__.py  _session.py  elasticbeanstalk.py
src/backend/aspen/cli/: __init__.py  db.py  sync_auth0.py  toplevel.py
src/backend/aspen/config/: config.py  development.py  docker_compose.py  local.py  production.py  testing.py
src/backend/aspen/covidhub_import/: __init__.py  implementation.py  import_admins.py  import_projects.py  import_trees.py  import_users.py  utils.py
src/backend/aspen/database/: connection.py  schema.py
src/backend/database_migrations/: env.py
src/backend/etc/: nginx.conf  split.yml  supervisord.conf
src/backend/pipeline_tests/: conftest.py  miniwdl.cfg  test_gisaid_pipeline.py
src/backend/scripts/: migrate-all.sh  setup_dev_data.sh  setup_localdata.py
(+1646 files in other folders)
